// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataOverlayDataRow > Markdown > should render markdown row for overlay panel correctly 1`] = `
<div>
  <div
    data-testid="ReactMarkdownWrapper"
  >
    [{"content":"# content"},{}]
  </div>
</div>
`;

exports[`DataOverlayDataRow > Markdown > should render markdown row for text annotation correctly 1`] = `
<div>
  <div
    data-testid="ReactMarkdownWrapper"
  >
    [{"style":{"whiteSpace":"nowrap"},"content":"# content"},{}]
  </div>
</div>
`;

exports[`DataOverlayDataRow > Markdown > should render markdown row with data binding variable correctly in editing mode 1`] = `
<div>
  <div
    data-testid="ReactMarkdownWrapper"
  >
    [{"style":{"whiteSpace":"nowrap"},"content":"# content \${binding-a}"},{}]
  </div>
</div>
`;

exports[`DataOverlayDataRow > Markdown > should render markdown row with data binding variable correctly in viewing mode 1`] = `
<div>
  <div
    data-testid="ReactMarkdownWrapper"
  >
    [{"style":{"whiteSpace":"nowrap"},"content":"# content 22"},{}]
  </div>
</div>
`;

exports[`DataOverlayDataRow > should render markdown row with data binding variable correctly in viewing mode from useBindingData 1`] = `
<div>
  <div
    data-testid="ReactMarkdownWrapper"
  >
    [{"style":{"whiteSpace":"nowrap"},"content":"# content ACTIVE"},{}]
  </div>
</div>
`;
